forEnersys/DavePkg/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AD_Business_Area__c</fullName>
        <label>AD Business Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AD_Industry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Rotary wing</fullName>
                </value>
                <value>
                    <fullName>Fixed wing</fullName>
                </value>
                <value>
                    <fullName>Fixed wing - narrow body</fullName>
                </value>
                <value>
                    <fullName>Fixed wing - wide body</fullName>
                </value>
                <value>
                    <fullName>Fixed wing - business jet</fullName>
                </value>
                <value>
                    <fullName>Fixed wing - General aviation</fullName>
                </value>
                <value>
                    <fullName>Trucks</fullName>
                </value>
                <value>
                    <fullName>Tank</fullName>
                </value>
                <value>
                    <fullName>Troop carrier</fullName>
                </value>
                <value>
                    <fullName>Armoured car</fullName>
                </value>
                <value>
                    <fullName>Amphibious vehicle</fullName>
                </value>
                <value>
                    <fullName>Armoured engineering vehicle</fullName>
                </value>
                <value>
                    <fullName>Air defence vehicle</fullName>
                </value>
                <value>
                    <fullName>Surface vessel</fullName>
                </value>
                <value>
                    <fullName>Submarine - diesel electric</fullName>
                </value>
                <value>
                    <fullName>Submarine - nuclear</fullName>
                </value>
                <value>
                    <fullName>Small lift launch vehicle</fullName>
                </value>
                <value>
                    <fullName>Medium lift launch vehicle</fullName>
                </value>
                <value>
                    <fullName>Heavy lift launch vehicle</fullName>
                </value>
                <value>
                    <fullName>Super heavy lift launch vehicle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AD_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if AD classification is required</inlineHelpText>
        <label>AD Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Distribution_Channel__c</fullName>
        <label>AD Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AD_Industry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Armoured Fighting Vehicles [Security]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AD_Industry__c</fullName>
        <label>AD Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Sea</fullName>
                </value>
                <value>
                    <fullName>Space (Launcher)</fullName>
                </value>
                <value>
                    <fullName>BMS [Battery Monitoring System]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acct_Auto__c</fullName>
        <description>Account Auto Number used for BaaN integration</description>
        <displayFormat>{0000000}</displayFormat>
        <label>Acct Auto#</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Address_Code__c</fullName>
        <label>Address Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Number_Pick__c</fullName>
        <label>Company #</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Number</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <description>Customer Number from Customer Master Databases</description>
        <label>Company Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Data__c</fullName>
        <inlineHelpText>Integrated field showing the email where financial correspondences should be sent.</inlineHelpText>
        <label>Financial Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Terms</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Delivery Terms - DT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Accounts (Delivery Terms)</relationshipLabel>
        <relationshipName>Accounts_Delivery_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>End-User</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>BID</fullName>
                </value>
                <value>
                    <fullName>LAD</fullName>
                </value>
                <value>
                    <fullName>LTC</fullName>
                </value>
                <value>
                    <fullName>Power System Provider</fullName>
                </value>
                <value>
                    <fullName>VADs/System Integrator</fullName>
                </value>
                <value>
                    <fullName>Distributor / Agent (excluding VADs)</fullName>
                </value>
                <value>
                    <fullName>Truck Dealer</fullName>
                </value>
                <value>
                    <fullName>Battery Dealers and Distributor</fullName>
                </value>
                <value>
                    <fullName>Key End User</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Armoured Fighting Vehicles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMEA_CLASS__c</fullName>
        <label>EMEA CLASS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMEA_JSON_Date_Time__c</fullName>
        <label>EMEA JSON Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EMEA_JSON__c</fullName>
        <label>EMEA JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Customer Master</description>
        <inlineHelpText>Generic email for the company</inlineHelpText>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <description>External Id for Accounts
For Baan Account, it is generated as &apos;B-&apos;+Company_Number+&apos;-&apos;+Customer_Number</description>
        <externalId>true</externalId>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Custom Industry field for EMEA Classifications</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB_EMEA__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AGV</fullName>
                </value>
                <value>
                    <fullName>AGV-LGV</fullName>
                </value>
                <value>
                    <fullName>Arial Platform</fullName>
                </value>
                <value>
                    <fullName>Burden Carrier</fullName>
                </value>
                <value>
                    <fullName>Cleaning machines</fullName>
                </value>
                <value>
                    <fullName>Floor Care</fullName>
                </value>
                <value>
                    <fullName>Forklifts and Industrial trucks</fullName>
                </value>
                <value>
                    <fullName>GSE</fullName>
                </value>
                <value>
                    <fullName>GSE - Other</fullName>
                </value>
                <value>
                    <fullName>Hand Truck</fullName>
                </value>
                <value>
                    <fullName>Industrial Truck Narrow Isle</fullName>
                </value>
                <value>
                    <fullName>Industrial Truck Rider</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Plants</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Mining - Other</fullName>
                </value>
                <value>
                    <fullName>Other End Users MP</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Rail Lighting</fullName>
                </value>
                <value>
                    <fullName>Rail Locomotive</fullName>
                </value>
                <value>
                    <fullName>Rail MP</fullName>
                </value>
                <value>
                    <fullName>Rail - Other</fullName>
                </value>
                <value>
                    <fullName>Renewables</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Sea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB_EMEA__c</fullName>
        <description>EMEA Line of Business</description>
        <inlineHelpText>EMEA Line of Business</inlineHelpText>
        <label>LOB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Motive</fullName>
                </value>
                <value>
                    <fullName>Reserve</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Inbound_Message__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Tag__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Time__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MP_Business_Area__c</fullName>
        <label>MP Business Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MP_Industry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Food Retailers</fullName>
                </value>
                <value>
                    <fullName>Non Food Retailers</fullName>
                </value>
                <value>
                    <fullName>Logistic Operators</fullName>
                </value>
                <value>
                    <fullName>Ports and Warehouses</fullName>
                </value>
                <value>
                    <fullName>FMCG</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Steel and Metal Industry</fullName>
                </value>
                <value>
                    <fullName>Other Industries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if MP Classification is required</inlineHelpText>
        <label>MP Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_Distribution_Channel__c</fullName>
        <label>MP Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MP_Industry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Truck Dealer</fullName>
                </value>
                <value>
                    <fullName>Battery Dealers and Distributor</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Key End User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_Industry__c</fullName>
        <label>MP Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Forklifts and Industrial trucks</fullName>
                </value>
                <value>
                    <fullName>AGV-LGV</fullName>
                </value>
                <value>
                    <fullName>Cleaning machines</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Plants</fullName>
                </value>
                <value>
                    <fullName>Other End Users MP</fullName>
                </value>
                <value>
                    <fullName>Rail MP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <description>Direct Map from Customer Master</description>
        <label>Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_DUNS_number__c</fullName>
        <description>To store parent duns number for indexed searches</description>
        <label>Parent DUNS number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Terms</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Payment Terms - PT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Accounts (Payment Terms)</relationshipLabel>
        <relationshipName>Accounts_Payment_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <description>Prospect # for Prospect Account Record Types</description>
        <formula>Acct_Auto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protective_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Protective Account - only updated by EnerSys Marketing Directors.  If Checked, any quote where the account is used would need to go in for price approval.</description>
        <label>Protective Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RP_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if RP classification is required</inlineHelpText>
        <label>RP Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RP_Distribution_Channel__c</fullName>
        <label>RP Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Power System Provider</fullName>
                </value>
                <value>
                    <fullName>VADs/System Integrator</fullName>
                </value>
                <value>
                    <fullName>Distributor / Agent (excluding VADs)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RP_Industry__c</fullName>
        <label>RP Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Renewables</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Customer_No__c</fullName>
        <formula>Related_Customer__r.Customer_Number__c</formula>
        <label>Related Customer No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Shipping Accounts</relationshipLabel>
        <relationshipName>Related_Shipping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SAP Customer Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based</fullName>
                </value>
                <value>
                    <fullName>Contract Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Agent_Email__c</fullName>
        <description>Sales Engineer Email from BaaN</description>
        <label>Sales Agent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_To_Cust_No__c</fullName>
        <formula>IF(ISPICKVAL(Type, &quot;Ship To&quot;), Address_Code__c &amp; &quot; &quot; &amp; &quot;/&quot; &amp; &quot; &quot; &amp;  Related_Customer__r.Customer_Number__c, &quot;&quot;)</formula>
        <label>Ship To/Cust No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_ExtID__c</fullName>
        <externalId>true</externalId>
        <label>Ship To ExtID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Shipping_Terms__c</fullName>
        <label>Shipping Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal Customer</fullName>
                </value>
                <value>
                    <fullName>Doubtful Customer</fullName>
                </value>
                <value>
                    <fullName>Blocked Customer</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Credit Hold/Block</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms_of_Delivery_Code__c</fullName>
        <description>BaaN integration</description>
        <label>Terms of Delivery Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Delivery_Desc__c</fullName>
        <description>BaaN Integration</description>
        <label>Terms of Delivery Desc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment_Code__c</fullName>
        <description>Customer Master</description>
        <label>Terms of Payment Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment_Desc__c</fullName>
        <label>Terms of Payment Desc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Americas_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>Customer_Number__c</columns>
        <columns>Company_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>Americas Accounts</label>
        <sharedTo>
            <group>Americas_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Americas_Prospect</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Prospect__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Prospect</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notEqual</operation>
            <value>Ship To</value>
        </filters>
        <label>Americas Prospect (Not Ship To)</label>
        <sharedTo>
            <group>Americas_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Americas_Ship_To_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Prospect__c</columns>
        <columns>Related_Customer__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Prospect</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Ship To</value>
        </filters>
        <label>Americas Ship To Accounts</label>
        <sharedTo>
            <group>Americas_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEAS_Prospect</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Prospect__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>EMEAS Prospect</label>
        <sharedTo>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
</CustomObject>